# VTK-2023-Labo1

./: CMakeLists.txt  README.md  tga2mp4.sh
1 - Dessiner une ligne/: CMakeLists.txt  OneLine.cpp  OnePoint.cpp  README.md  line.cpp
10 - Camera/: CMakeLists.txt  camera.cpp  camera_flat.cpp  camera_solution.cpp  model.cpp  model.h
11 - Refactor/: CMakeLists.txt  Camera.h  FlatShader.cpp  FlatShader.h  FlatTextureShader.cpp  FlatTextureShader.h  GouraudShader.cpp  GouraudShader.h  GouraudTextureShader.cpp  GouraudTextureShader.h  Shader.cpp  Shader.h  Triangle.h  Viewport.cpp  refactor.cpp
12 - Quantized Shader/: CMakeLists.txt  FlatShader.cpp  FlatShader.h  FlatTextureShader.h  GouraudShader.cpp  GouraudShader.h  GouraudTextureShader.h  QuantizedGouraudShader.cpp  QuantizedGouraudShader.h  Shader.cpp  Shader.h  Viewport.h  alternative_shaders.cpp  geometry.h  model.cpp  tgaimage.cpp
13 - Normal texture/: CMakeLists.txt  Camera.cpp  FlatShader.h  FlatTextureShader.cpp  FlatTextureShader.h  GouraudShader.cpp  GouraudTextureShader.cpp  GouraudTextureShader.h  NormalTextureShader.cpp  NormalTextureShader.h  Shader.cpp  Shader.h  Triangle.cpp  main.cpp  tgaimage.h
14 - Specular Lightning/: CMakeLists.txt  Camera.h  FlatTextureShader.h  GouraudShader.cpp  GouraudTextureShader.cpp  GouraudTextureShader.h  NormalShader.h  NormalTextureShader.cpp  NormalTextureShader.h  PhongNormalShader.cpp  PhongNormalShader.h  PhongShader.cpp  PhongShader.h  PhongTextureShader.cpp  PhongTextureShader.h  Shader.cpp  Shader.h  TGAColor.h  TestAllShaders.cpp  main.cpp  rotatingLight.cpp  specularPower.cpp
15 - Shadows/: CMakeLists.txt  Camera.cpp  FlatShader.cpp  FlatShader.h  FlatTextureShader.cpp  GouraudShader.h  Labo1_Ombrages_main.cpp  Labo1_Ombrages_main_textured.cpp  NormalShader.cpp  OneShader.cpp  PhongNormalTextureShader.cpp  PhongNormalTextureShader.h  PhongShader.cpp  ShadePhongShader.cpp  ShadePhongShader.h  ShadePhongTextureShader.cpp  ShadePhongTextureShader.h  ShadeTexturePhongShader.cpp  ShadeTexturePhongShader.h  Shader.cpp  Shader.h  TGAColor.cpp  TestAllShaders.cpp  main.cpp  model.cpp  model.h  tgaimage.cpp  tgaimage.h
2 - Wireframe/: CMakeLists.txt  WireFrame.cpp  line.cpp  line.h
3 - Dessiner un triangle/: CMakeLists.txt  triangle_gpu.cpp  triangles.cpp
4 - Flat shading et back-face culling/: CMakeLists.txt  flat_shading.cpp  random_head.cpp
5 - z-Buffering/: CMakeLists.txt  zbuffering.cpp
6 - Textures/: CMakeLists.txt  geometry.h  model.cpp  texture.cpp
7 - Gouraud/: CMakeLists.txt  gouraud.cpp  gouraud_notext.cpp  tgaimage.cpp
8 - ViewPort/: CMakeLists.txt  geometry.h  model.h  viewport.cpp  viewport_solution.cpp
9 - Projection/: CMakeLists.txt  projection.cpp  projection_solution.cpp  tgaimage.h
