cmake_minimum_required(VERSION 3.15)
project(CppRenderer)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory("1 - Dessiner une ligne")
add_subdirectory("2 - Wireframe")
add_subdirectory("3 - Dessiner un triangle")
add_subdirectory("4 - Flat shading et back-face culling")
add_subdirectory("5 - z-Buffering")
add_subdirectory("6 - Textures")
add_subdirectory("7 - Gouraud")
add_subdirectory("8 - ViewPort")
add_subdirectory("9 - Projection")
add_subdirectory("10 - Camera")
add_subdirectory("11 - Refactor")